--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>yaoyue68\'s blog</title> 
 </head> 
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="http://www.xx/xx/" scrolling="auto" noresize> 
+<frame name="main" src="https://github.com/zhxwayne/wayne.github.io" scrolling="auto" noresize> 
 </frameset> 
 </html>
